--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,8 @@
     <meta
       name="description"
     />
-    <title>React App</title>
+    <link rel="icon" type="image/png" href="./favicon.ico"/>
+    <title>SQLEx</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
